app/assets/stylesheets/modaleffects.css
/* General styles for the modal */

/* 
Styles for the html/body for special modal where we want 3d effects
Note that we need a container wrapping all content on the page for the 
perspective effects (not including the modals and the overlay).
*/
.md-perspective,
.md-perspective body {
	height: 100%;
	
}

.md-perspective body  {
	background: #222;
	-webkit-perspective: 600px;
	-moz-perspective: 600px;
	perspective: 600px;
}

.md-modal {
	position: fixed;
	top: 50%;
	left: 50%;
	width: 50%;
	max-width: 630px;
	min-width: 320px;
	height: auto;
	z-index: 2000;
	visibility: hidden;
	-webkit-backface-visibility: hidden;
	-moz-backface-visibility: hidden;
	backface-visibility: hidden;
	-webkit-transform: translateX(-50%) translateY(-50%);
	-moz-transform: translateX(-50%) translateY(-50%);
	-ms-transform: translateX(-50%) translateY(-50%);
	transform: translateX(-50%) translateY(-50%);
}

.md-show {
	visibility: visible;
}

.md-overlay {
	position: fixed;
	width: 100%;
	height: 100%;
	visibility: hidden;
	top: 0;
	left: 0;
	z-index: 1000;
	opacity: 0;

	/* Color of the overlay once modal is up */
	/*background: rgba(222,238,238,0.8);*/
	background: rgba(0,0,0,0.8);

	-webkit-transition: all 0.3s;
	-moz-transition: all 0.3s;
	transition: all 0.3s;
}

.md-show ~ .md-overlay {
	opacity: 1;
	visibility: visible;
}

.md-content {
	/* Color of text in the modal */
	color: #565b60;

	/* Color of background in the modal;
	   note: color of header banner darkens relative to this color automatically */
	background: #fff;
	position: relative;
	border-radius: 3px;
	margin: 0 auto;
	box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.3);
}

@media (max-width: 640px) {
	.md-content {
		overflow-y: scroll;
		-webkit-overflow-scrolling: touch;
	}
}

@media (max-width: 640px) and (max-height: 600px){.md-content{ max-height: 550px}}
@media (max-width: 640px) and (max-height: 550px){.md-content{ max-height: 500px}}
@media (max-width: 640px) and (max-height: 500px){.md-content{ max-height: 450px}}
@media (max-width: 640px) and (max-height: 450px){.md-content{ max-height: 400px}}
@media (max-width: 640px) and (max-height: 400px){.md-content{ max-height: 350px}}
@media (max-width: 640px) and (max-height: 350px){.md-content{ max-height: 300px}}
@media (max-width: 640px) and (max-height: 300px){.md-content{ max-height: 250px}}
@media (max-width: 640px) and (max-height: 250px){.md-content{ max-height: 200px}}
@media (max-width: 640px) and (max-height: 200px){.md-content{ max-height: 150px}}

.md-content h3 {
	margin: 0;
	padding: 0.4em;
	
	text-align: center;
	font-size: 2.6em;
	font-weight: 300;
	opacity: 0.8;

	/* Color of background in modal header banner */
	background: rgba(201,229,229,0.8);

	border-radius: 3px 3px 0 0;
}

.md-content > div {
	padding: 15px 40px 30px;
	margin: 0;
	font-weight: 300;
	font-size: 1.2em;
}

.md-content > div p {
	margin: 0;
	padding: 10px 0;
}

.md-content > div ul {
	margin: 0;
	padding: 0 0 30px 20px;
}

.md-content > div ul li {
	padding: 5px 0;
}

.md-content button {
	display: block;
	margin: 0 auto;
	font-size: 0.8em;
}

/* Individual modal styles with animations/transitions */

/* Effect 1: Fade in and scale up */
.md-effect-1 .md-content {
	-webkit-transform: scale(0.7);
	-moz-transform: scale(0.7);
	-ms-transform: scale(0.7);
	transform: scale(0.7);
	opacity: 0;
	-webkit-transition: all 0.3s;
	-moz-transition: all 0.3s;
	transition: all 0.3s;
}

.md-show.md-effect-1 .md-content {
	-webkit-transform: scale(1);
	-moz-transform: scale(1);
	-ms-transform: scale(1);
	transform: scale(1);
	opacity: 1;
}


@media screen and (max-width: 32em) {
	body { font-size: 75%; }
}

